# varachess

./: README.md
Contracts/: .binpath  Cargo.toml  README.md  build.rs
Contracts/io/: Cargo.toml
Contracts/io/src/: lib.rs
Contracts/src/: lib.rs
Contracts/state/: Cargo.toml
Contracts/state/src/: lib.rs
Contracts/tests/: test.rs
front/: README.md  package.json
front/src/: App.css  App.tsx
front/src/assets/images/icons/: friends.png:Zone.Identifier  leaderboard.png:Zone.Identifier  learn.png:Zone.Identifier  marketplace.png:Zone.Identifier  mypieces.png:Zone.Identifier  news.png:Zone.Identifier  profile.png:Zone.Identifier  puzzle.png:Zone.Identifier  settings.png:Zone.Identifier  turnaments.png:Zone.Identifier
front/src/components/layout/footer/: Footer.tsx
front/src/components/layout/header/: Header.module.scss  Header.tsx  logo-white.svg:Zone.Identifier  (+2 more)
front/src/pages/: index.tsx
front/src/pages/about/: About.tsx
front/src/pages/faq/: Faq.tsx  index.ts
front/src/pages/game/: ChessGame.tsx  ChessGame_NEW.tsx  Chess_bdt45.svg:Zone.Identifier  Chess_kdt45.svg:Zone.Identifier  Chess_ndt45.svg:Zone.Identifier  Chess_pdt45.svg:Zone.Identifier  Chess_qdt45.svg:Zone.Identifier  Chess_rdt45.svg:Zone.Identifier  DataSend.tsx  EndButton.tsx  Game.css  Game.tsx  PlayButton.tsx
front/src/pages/home/: First.tsx  GasData.tsx  GreenButton.tsx  Home POST.tsx  Home.tsx  MenuColors.tsx  PingButton.tsx  PongState.tsx  ReadState.tsx  RedButton.tsx  YellowButton.tsx
front/src/pages/main/: Main.tsx
front/src/pages/profile/: Loginpage.tsx  Profile.tsx
(+2 files in other folders)
