[package]
name = "varachess"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["debug"] }
varachess-io = { path = "io" }
varachess-state = { path = "state" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["wasm-opt"] }
varachess-io = { path = "io" }
varachess-state = { path = "state" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2" }